--- a/department-service.properties
+++ b/department-service.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto= update
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message=Hello!!, Department message loading.. 
+spring.boot.message=Hello!!, Department updated message.
